Document how to run weld-se-numberguess with SecurityManager enabled